fix tag overlap

--- a/frontend/src/components/AllRestaurantsPage/RestaurantCard/RestaurantCard.css
+++ b/frontend/src/components/AllRestaurantsPage/RestaurantCard/RestaurantCard.css
@@ -18,17 +18,21 @@
   /* justify-content: space-between; */
   gap: 20px;
   width: 100%;
+  height: 330px;
 }
 .restaurant-card:hover {
   box-shadow: 0 0 14px rgba(0, 0, 0, 0.6);
 }
 .restaurant-card-img {
   max-width: 250px;
+  height: 100%;
+  overflow: hidden;
 }
 
 .restaurant-card-img img {
   width: 250px;
-  aspect-ratio: 3/4;
+  /* aspect-ratio: 3/4; */
+  height: 100%;
   object-fit: fill;
   object-position: top;
   border-radius: 5px;
@@ -76,14 +80,17 @@
   align-items: center;
   position: relative;
   padding-left: 10px;
+  height: 15px;
 }
 .rating-count-container .rating-icon-img-container {
   position: absolute;
-  left: 35px;
+}
+.rating-count-container .rating-icon-img-container img {
+  padding: 0;
 }
 .rating-count-container p {
   position: absolute;
-  left: 140px;
+  left: 110px;
 }
 
 .open-tag {
